ncc/testsuite/negative/checked.n
// NO-TEST


public module TestChecked
{
  private TestIt (x : int) : int
  {
    checked {      
      def x = System.Int32.MaxValue + 20 + x; // E: result of operation is more than System.Int32.MaxValue
      def y = System.Int32.MinValue * -1; // E: result of operation is more than System.Int32.MaxValue
      def z = System.Int32.MinValue - System.Int32.MaxValue + 2 * x; // E: result of operation is less than System.Int32.MinValue

      _ = 1 /0; // E: division by zero during constants folding
      
      x + y + z
    }
  }
  
  public Main () : void
  {
    ignore (TestIt (10))
  }
}

/*
BEGIN-OUTPUT
END-OUTPUT
*/
